--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -42,7 +42,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/previous_button"
-          android:drawableRight="@drawable/arrow_left"
+          android:drawableLeft="@drawable/arrow_left"
           android:drawablePadding="4dp"/>
 
       <Button
