--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -39,18 +39,16 @@
 
       <Button
           android:id="@+id/previous_button"
-          android:layout_width="wrap_content"
+          android:layout_width="32dp"
           android:layout_height="wrap_content"
-          android:text="@string/previous_button"
-          android:drawableLeft="@drawable/arrow_left"
+          android:drawableRight="@drawable/arrow_left"
           android:drawablePadding="4dp"/>
 
       <Button
           android:id="@+id/next_button"
-          android:layout_width="wrap_content"
+          android:layout_width="32dp"
           android:layout_height="wrap_content"
-          android:text="@string/next_button"
-          android:drawableRight="@drawable/arrow_right"
+          android:drawableLeft="@drawable/arrow_right"
           android:drawablePadding="4dp"/>
 
     </LinearLayout>
