--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -38,6 +38,21 @@
       android:orientation="horizontal" >
 
       <Button
+          android:id="@+id/cheat_button"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="bottom|center"
+          android:text="@string/cheat_button"
+          android:drawablePadding="4dp" />
+
+  </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal" >
+
+      <Button
           android:id="@+id/previous_button"
           android:layout_width="32dp"
           android:layout_height="wrap_content"
